fix(ui5-shellbar, ui5-breadcrumbs, ui5-barcode-scanner-dialog): align popover paddings

--- a/packages/fiori/src/themes/BarcodeScannerDialog.css
+++ b/packages/fiori/src/themes/BarcodeScannerDialog.css
@@ -1,3 +1,7 @@
+.ui5-barcode-scanner-dialog-root::part(content) {
+    padding: .4375rem;
+}
+
 /* video */
 .ui5-barcode-scanner-dialog-video-wrapper,
 .ui5-barcode-scanner-dialog-video {
